--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.8.1
 cloudinary==1.42.1
+dj-database-url==2.3.0
 Django==5.1.5
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-yasg==1.21.8
+gunicorn==23.0.0
 inflection==0.5.1
 pillow==11.1.0
 psycopg2-binary==2.9.10
