--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 cloudinary==1.42.1
 dj-database-url==2.3.0
+dj-rest-auth==7.0.1
 Django==5.1.5
+django-allauth==65.3.1
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
